# dq-like-rpg

./: .gitignore  CREDITS.md  Cargo.toml  Makefile.toml  README.md
.github/ISSUE_TEMPLATE/: new-feature.md
.github/workflows/: rust.yml
assets/config/: map_layout.txt
examples/: audio.rs  egui_test.rs  fixed_timestamp.rs  multi_layer_ui_test.rs  snake.rs
game_plugin/: Cargo.toml
game_plugin/src/: actions.rs  audio.rs  battle_actions.rs  character_status.rs  effects.rs  enemies.rs  event_actions.rs  events.rs  explore_actions.rs  generate.rs  inventory.rs  lib.rs  loading.rs  map.rs  menu.rs  player.rs  setup.rs  ui.rs
src/: _player.rs  components.rs  events.rs  game.rs  main.rs
src/resources/: battle.rs  enemy.rs  gameplay.rs  item.rs  map.rs  mod.rs
src/systems/: animate_sprite.rs  audio_event_listener.rs  effect.rs  event_listener.rs  gamestart_keyboard.rs  generate_map.rs  input.rs  loading.rs  mod.rs  player_battle_input.rs  player_movement_input.rs  print_keyboard_event.rs  setup.rs  setup_battle.rs  setup_cameras.rs  setup_event_ui.rs  setup_loading_ui.rs  setup_map_ui.rs  setup_status_ui.rs  setup_title_ui.rs  spawn_map_entity.rs  spawn_player.rs  state_enter_despawn.rs  translation.rs  translation_animation.rs
