[package]
name = "rpg"
version = "0.1.0"
authors = ["Naoki Numaguchi <naoki.numaguchi@groove-x.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_tilemap = "0.4"
bevy_egui = "0.5"
rand = "0.7.3"
strum = "0.21"
strum_macros = "0.21"
bevy_kira_audio = { version = "0.5.1", features=["mp3"]}

[patch.crates-io]
bevy_tilemap = { git = 'https://github.com/scnsh/bevy_tilemap', branch = 'patched' }