[package]
name = "dq-like-rpg"
description = "A traditoanl role playing game likes Dragon quest"
version = "0.1.0"
authors = ["Naoki Numaguchi <redheru+dev@gmail.com>"]
edition = "2018"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "game_plugin/default"
]

native = [
    "bevy/bevy_wgpu",
    "game_plugin/native"
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dinamic",
    "native"
]

[dependencies]
bevy = {version="0.5.0", default-features=false}
game_plugin = {path = "game_plugin"}
winit = {version="0.24.0"}

bevy_webgl2 = {version="0.5.2", optional=true}

[build-dependencies]
embed-resource = "1.4"

#[package.metadata.bundle]
#name = "DQ-like-RPG"
#identifier = "dev.scnsh.dq-like-rpg"
#icon = ["build/*.png"]
#resouraces = ["assets"]
#short_description = "A traditoanl role playing game likes Dragon quest"
