[package]
name = "game_plugin"
version = "0.1.0"
publish = false
authors = ["Naoki Numaguchi <redheru+dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy = {version="0.5.0", default-features=false}
bevy_kira_audio = "0.5.1"
bevy_tilemap = "0.4"
bevy_asset_loader = "0.4.0"
rand = "0.8.3"
#getrandom = {version="0.1", features=["wasm-bindgen"]}

[patch.crates-io]
# avoid bug: https://github.com/joshuajbouw/bevy_tilemap/issues/152
bevy_tilemap = { git = 'https://github.com/scnsh/bevy_tilemap', branch = 'patched' }
